# mailbot-auth-server

./: .env.default  .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs
src/db/: mod.rs
