[package]
name = "sales-mails-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.5"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenv = "0.15"
